[package]
name = "payment_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "^4.6.0"
env_logger = "^0.11.3"
log = "^0.4.21"
serde = { version = "^1.0.203", features = ["derive"] }
serde_json = "^1.0.117"
dotenv = "^0.15.0"
uuid = { version = "^1.8.0", features = [
    "v4",
    "serde",
    "fast-rng",
    "macro-diagnostics"
] }
sea-orm = { version = "^0.12.15", features = [
    "sqlx-postgres",
    "with-uuid",
    "runtime-tokio-rustls",
    "macros"
] }
chrono = "^0.4.38"
tokio = { version = "^1.37.0", features = [
    "rt",
    "rt-multi-thread",
    "macros"
] }
async-trait = "^0.1.79"
derive_more = "^0.99.17"
argon2 = "^0.5.3"
regex = "^1.10.4"
futures = "^0.3.30"
rand = "^0.8.5"
strum = "^0.26.2"
strum_macros = "^0.26.3"